{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 88,
  "lineage": "d911a3b4-0833-8ea9-4849-d9f18d997a7d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1b8e6c612f68f3b",
            "arn": "arn:aws:ec2:us-east-2:282052313151:elastic-ip/eipalloc-0a1b8e6c612f68f3b",
            "association_id": "eipassoc-0e6a568dc2d9c4653",
            "domain": "vpc",
            "id": "eipalloc-0a1b8e6c612f68f3b",
            "instance": "i-0ffb71a9ecd08847c",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05498d255573f65ff",
            "private_dns": "ip-10-0-1-95.us-east-2.compute.internal",
            "private_ip": "10.0.1.95",
            "public_dns": "ec2-3-140-116-92.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.116.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "comments-app-eip"
            },
            "tags_all": {
              "Name": "comments-app-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.app_server",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0376da4f943e28a68",
            "arn": "arn:aws:ec2:us-east-2:282052313151:instance/i-0ffb71a9ecd08847c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ffb71a9ecd08847c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "comment_app_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05498d255573f65ff",
            "private_dns": "ip-10-0-1-95.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.95",
            "public_dns": "ec2-3-140-116-92.us-east-2.compute.amazonaws.com",
            "public_ip": "3.140.116.92",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06c30e7489e1e936a",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d33246365a4e9074",
            "tags": {
              "Name": "comments-app-server"
            },
            "tags_all": {
              "Name": "comments-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e1b947eeb41b2d93"
            ]
          },
          "dependencies": [
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:282052313151:internet-gateway/igw-03ee1ef31cb84aca9",
            "id": "igw-03ee1ef31cb84aca9",
            "owner_id": "282052313151",
            "tags": {
              "Name": "comments-app-igw"
            },
            "tags_all": {
              "Name": "comments-app-igw"
            },
            "vpc_id": "vpc-0e9e4d728df64d3dd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:282052313151:route-table/rtb-0a90dd0fa87dbcdde",
            "id": "rtb-0a90dd0fa87dbcdde",
            "owner_id": "282052313151",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ee1ef31cb84aca9",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "comments-app-public-rt"
            },
            "tags_all": {
              "Name": "comments-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9e4d728df64d3dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc33db4153cff3af",
            "route_table_id": "rtb-0a90dd0fa87dbcdde",
            "subnet_id": "subnet-0d33246365a4e9074"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:282052313151:security-group/sg-0e1b947eeb41b2d93",
            "description": "Security group for Phoenix application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e1b947eeb41b2d93",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "comments-app-app-sg",
            "name_prefix": "",
            "owner_id": "282052313151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "comments-app-app-sg"
            },
            "tags_all": {
              "Name": "comments-app-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9e4d728df64d3dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:282052313151:security-group/sg-03ea22b354b55b56d",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03ea22b354b55b56d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from app server",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e1b947eeb41b2d93"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "comments-app-db-sg",
            "name_prefix": "",
            "owner_id": "282052313151",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "comments-app-db-sg"
            },
            "tags_all": {
              "Name": "comments-app-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9e4d728df64d3dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.app",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:282052313151:subnet/subnet-0ca0e22e70df4d49f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca0e22e70df4d49f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "282052313151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "comments-app-private-subnet"
            },
            "tags_all": {
              "Name": "comments-app-private-subnet"
            },
            "vpc_id": "vpc-0e9e4d728df64d3dd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:282052313151:subnet/subnet-0d33246365a4e9074",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d33246365a4e9074",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "282052313151",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "comments-app-public-subnet"
            },
            "tags_all": {
              "Name": "comments-app-public-subnet"
            },
            "vpc_id": "vpc-0e9e4d728df64d3dd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:282052313151:vpc/vpc-0e9e4d728df64d3dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0da63077ede2accfd",
            "default_route_table_id": "rtb-0961a1055c3d28b90",
            "default_security_group_id": "sg-090a2dd82899fd101",
            "dhcp_options_id": "dopt-02edc31babb2319a6",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e9e4d728df64d3dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0961a1055c3d28b90",
            "owner_id": "282052313151",
            "tags": {
              "Name": "comments-app-vpc"
            },
            "tags_all": {
              "Name": "comments-app-vpc"
            }
          }
        }
      ]
    }
  ]
}